Update vibes.html to remove names.

--- a/vibes.html
+++ b/vibes.html
@@ -77,13 +77,13 @@ I have a bunch of emails in my gmail account of the form:
 --------------
 Results 0531:
 
-@Adam-Cohen-2 requests $209.71 from:
-    $152.72 @Twentysix (web)
-    $56.99 @Ankit-Mehta-19 (web)
+@name1 requests $209.71 from:
+    $152.72 @name2 (web)
+    $56.99 @name3 (web)
 
-@akshaymiterani requests $402.43 from:
-    $262.89 @Ashish-arora-6 (web)
-    $139.54 @Ankit-Mehta-19 (web)
+@name4 requests $402.43 from:
+    $262.89 @name2 (web)
+    $139.54 @name4 (web)
 --------------
 
 These are poker winnings (and losings) for the players (named with @name).
@@ -201,8 +201,8 @@ Please generate for me all the python code needed to scrape the email contents u
 The actual text we want to parse looks more like:
 
 @Akshit-Poddar &lt;https://venmo.com/u/Akshit-Poddar&gt; requests $2.24 from:
-    $2.24 @stephen-plutsky
-&lt;https://account.venmo.com/?txn=charge&audience=private&recipients=stephen-plutsky&amount=2.24&note=071925&gt;
+    $2.24 @name1
+&lt;https://account.venmo.com/?txn=charge&audience=private&recipients=name1&amount=2.24&note=071925&gt;
 
 Please rewrite the parsing code to ignore all extraneous links.
                     </div>
