Update vibes.html to remove more names.

--- a/vibes.html
+++ b/vibes.html
@@ -266,7 +266,7 @@ Rewrite the code to follow these rules.
                     <div class="code-block-inner">
 The line:
 
- $2.24 @stephen-plutsky
+ $2.24 @name5
 
 Results in:
 
