--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Please generate for me all the python code needed to scrape the email contents u
                     <div class="code-block-inner">
 The actual text we want to parse looks more like:
 
-@Akshit-Poddar &lt;https://venmo.com/u/Akshit-Poddar&gt; requests $2.24 from:
+@name1 &lt;https://venmo.com/u/name1&gt; requests $2.24 from:
     $2.24 @name1
 &lt;https://account.venmo.com/?txn=charge&audience=private&recipients=name1&amount=2.24&note=071925&gt;
 
