--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <div class="container mx-auto px-4 py-8 md:py-12">
         <header class="text-center mb-10">
-            <h1 class="text-4xl md:text-5xl font-bold text-gray-800">Our Collaboration Journey</h1>
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-800">Poker Vibes</h1>
             <p class="text-lg md:text-xl text-gray-600 mt-2">Building a Poker Data Scraper with Gemini</p>
         </header>
 
